<resources>
    <string name="app_name">Pinjam Plus</string>
    <string name="bottom_borrow_str">Pinjaman</string>
    <string name="bottom_mine_str">Milikku</string>
    <string name="network_requesting">Mengirim permintaan, mohon tunggu</string>
    <string name="network_error">Gagal terhubung ke internet</string>
    <string name="register_phone_input_tip">Silahkan masukkan no ponsel anda</string>
    <string name="register_code_tip">Kode</string>
    <string name="register_password_tip">Masukan Pasword</string>
    <string name="password_limit_tip_str">Password 4-10 digit, hanya angka dan huruf</string>
    <string name="register_rule_str">Perwakilan yang terdaftar membaca dan menyetujui kesepakatan tersebut</string>
    <string name="register_picture_code">Dapatkan Kode</string>
    <string name="register_str">Sign Up</string>
    <string name="login_pic_tip_str">Harap masukkan kode verifikasi gambar</string>
    <string name="login_forget_pwd_str">Lupa kata sandi anda?</string>
    <string name="login_str">Log in</string>
    <string name="login_rule_str">Perwakilan terdaftar membaca dan setuju***Perjanjian</string>
    <string name="kaptcha_title_str">kode verifikasi gambar</string>
    <string name="sure_str">Baiklah</string>
    <string name="cancel_str">Batal</string>
    <string name="input_kaptcha_code_str">Harap masukkan kode verifikasi gambar</string>
    <string name="input_ok_kaptcha_code_str">Harap masukkan kode verifikasi gambar yang benar</string>
    <string name="forget_password_str">Retrieve Password</string>
    <string name="borrow_title_str">Sejarah pelunasan</string>
    <string name="reply_histiory_title_str">Sejarah pelunasan</string>
    <string name="borrow_ing_desc_str">Jumlah Pengembalian</string>
    <string name="money_unit">Rp</string>
    <string name="borrow_limit_title">Jumlah Pinjaman</string>
    <string name="borrow_money_600">Rp600.000</string>
    <string name="borrow_money_1200">Rp1.200.000</string>
    <string name="borrow_money_600_str">600000</string>
    <string name="borrow_money_1200_str">1200000</string>
    <string name="borrow_day_title">Durasi</string>
    <string name="borrow_day_7">7 Hari</string>
    <string name="borrow_day_14">14 Hari</string>
    <string name="borrow_day_7_str">7</string>
    <string name="borrow_day_14_str">14</string>
    <string name="borrow_str">Pinjam Sekarang</string>
    <string name="borrow_tip_str">Audit tercepat 5 menit, pinjaman 20 menit</string>
    <string name="borrow_step_one_title_str">Informasi Dasar</string>
    <string name="borrow_step_one_str">Informasi\nDasar</string>
    <string name="borrow_step_two_title_str">Informasi Tambahan</string>
    <string name="borrow_step_two_str">Informasi\nTambahan</string>
    <string name="borrow_step_three_title_str">Sertifikat</string>
    <string name="borrow_step_three_str">Sertifikat\n</string>
    <string name="borrow_step_four_title_str">Rekening Bank</string>
    <string name="borrow_step_four_str">Rekening\nBank</string>
    <string name="person_info_title__str">Informasi Pribadi</string>
    <string name="full_name_str">Nama Lengkap</string>
    <string name="sex_str">Jenis kelamin</string>
    <string name="education_str">Pendidikan</string>
    <string name="job_str">Pekerjaan</string>
    <string name="nick_name_str">NIK</string>
    <string name="address_str">Alamat tempat tinggal tetap</string>
    <string name="full_address_str">Alamat Lengkap</string>
    <string name="borrow_step_one_eg_str">eg: JI.H.Muhi rt *** rt** no.20 pondok pinang\nkebayoran lama jakarta selatan</string>
    <string name="borrow_next_str">Berikutnya</string>
    <string name="province_tip">Provinsi Hunian</string>
    <string name="city_tip">Kota Hunian</string>
    <string name="area_tip">kecamatan Hunian</string>
    <string name="choose_province_tip">Pilih provinsi</string>
    <string name="choose_city_tip">Silahkan pilih kota</string>
    <string name="choose_area_tip">Silahkan pilih area</string>
    <string name="identity_card_str">Foto KTP sisi depan</string>
    <string name="handle_card_str">Foto wajah bersamaan dengan KTP di tangan</string>
    <string name="work_card_str">Kartu identitas perusahaan</string>
    <string name="argic_wage_str">Slip gaji</string>
    <string name="borrow_goal_str">Pinjaman</string>
    <string name="borrow_goal_tip_str">Tujuan pinjaman</string>
    <string name="company_info_str">Informasi perusahaan</string>
    <string name="company_name_tip_str">Nama Perushaan Anda</string>
    <string name="company_phone_tip_str">Telepon perusahaan</string>
    <string name="company_address_tip_str">Alamat Perusahaan</string>
    <string name="month_income_tip_str">Gaji Bulanan</string>
    <string name="saly_day_tip_str">Tanggal Gajian</string>
    <string name="relation_one_person">No Telpon Kerabat Dekat 1</string>
    <string name="relation_two_person">No Telpon Kerabat Dekat 2</string>
    <string name="relation_person_name_tip_str">Harap masukkan name kontak</string>
    <string name="relation_person_phone_tip_str">Silahkan masukkan nomor telephone</string>
    <string name="bank_name_tip_str">Nama Bank</string>
    <string name="bank_account_tip_str">Nomor Rekening Bank</string>
    <string name="bank_user_name_tip_str">Nama lengkap pemegang rekening</string>
    <string name="address_authorization_str">Otorisasi buku alamat</string>
    <string name="sms_authorization_str">Otorisasi SMS</string>
    <string name="call_record_authorization_str">Otorisasi rekaman suara</string>
    <string name="authorizaiton_str">Sudah</string>
    <string name="need_authorization_str">Tidak</string>
    <string name="tax_tip">Informasi Pilihan</string>
    <string name="tax_number_str">Silahkan mengisi nomor pajak</string>
    <string name="borrow_loan_virtual_account_str">Virtual Account</string>
    <string name="pay_guid_str">Payment guides</string>
    <string name="pay_guid_same_bank_tip">From the same Bank</string>
    <string name="pay_guid_diffence_bank_tip">Use BCA Card in BNI ATM</string>
    <string name="pay_guid_atm_tip">From the ATM</string>
    <string name="pay_guid_internet_tip">From Internet Banking</string>
    <string name="how_to_pay_str">How to pay&#160;</string>
    <string name="go_borrow_str">Kembali ke beranda</string>
    <string name="borrow_patch_str">Informasi tambahan</string>
    <string name="borrow_patch_title_str">Suplemen</string>
    <string name="borrow_patch_desc_str">Sedang ditinjau ulang,mohon bersabar</string>
    <string name="bank_str">Bank</string>
    <string name="bank_other_tip_str">Lainnya</string>
    <string name="end_time_tip_str">membayar kembali uang pada tanggal:</string>
    <string name="input_username_tip">Harap masukkan nama pengguna</string>
    <string name="choose_sex_tip">Silakan pilih jenis kelamin</string>
    <string name="choose_education_tip">silahkan pilih tingkat pendidikan</string>
    <string name="choose_job_tip">Silahkan pilih pekerjaan</string>
    <string name="input_card_tip">Harap masukkan nomor ID</string>
    <string name="input_right_card_tip">Harap masukkan nomor ID yang benar</string>
    <string name="choose_address_tip">Silahkan pilih alamat tempat tinggal permanen</string>
    <string name="input_detail_address_tip">mohon masukan alamat dengan lengkap</string>
    <string name="input_goal_tip">Harap masukkan tujuan pinjaman</string>
    <string name="input_company_name_tip">Harap masukkan nama perusahaan</string>
    <string name="input_company_phone_tip">Harap masukkan telepon perusahaan</string>
    <string name="input_company_address_tip">Harap masukkan alamat perusahaan</string>
    <string name="choose_salary_tip">Silakan pilih penghasilan bulanan</string>
    <string name="choose_salary_day_tip">Pilih hari gajian</string>
    <string name="choose_relation_one">Silahkan pilih kontak pertama</string>
    <string name="choose_relation_one_people_name">Silahkan pilih nama kontak yang pertama</string>
    <string name="choose_relation_one_people_phone">Harap pilih nomor kontak pertama</string>
    <string name="choose_relation_two">Silahkan pilih kontak kedua</string>
    <string name="choose_relation_two_people_name">Silakan pilih nama kontak kedua</string>
    <string name="choose_relation_two_people_phone">Harap pilih nomor kontak kedua</string>
    <string name="choose_same_relation_tip_str">Anda tidak bisa memilih hubungan yang sama</string>
    <string name="choose_same_people_tip_str">Anda tidak dapat memilih kontak yang sama</string>
    <string name="input_bank_accout_tip">Mohon masukan nomor rekening bank</string>
    <string name="input_bank_open_account_name_tip">Harap masukkan nama akun Anda</string>
    <string name="input_right_account_user_name_tip">Harap masukkan nama akun yang benar</string>
    <string name="choose_open_bank">Silahkan pilih bank</string>
    <string name="upload_contact_tip_str">Tolong sampaikan sertifikasi buku</string>
    <string name="upload_call_tip_str">Silahkan hubungi sertifikasi rekaman</string>
    <string name="upload_sms_tip_str">Silahkan upload otentikasi SMS</string>
    <string name="add_virtual_bank_str">Klik Add Repallment Account</string>
    <string name="repay_success_str">Keberhasilan pelunasan</string>
    <string name="repay_success_tip_str">Selamat,\nsukses pelunasan</string>
    <string name="repay_borrow_tip_str">Terus pinjam uang bisa klik tombol di bawah ini, nantikan untuk melayani anda lagi</string>
    <string name="borrow_again_str">Terus pinjaman</string>
    <string name="borrow_audit_title_str">Auditing</string>
    <string name="borrow_audit_desc_str">Sedang ditinjau ulang,mohon bersabar</string>
    <string name="borrow_audit_fail_title_str">Audit gagal</string>
    <string name="borrow_audit_fail_desc_str">Sedang ditinjau ulang,mohon bersabar</string>
    <string name="borrow_apply_title_str">Aplikasi</string>
    <string name="borrow_apply_desc_str">Menunggu persetujuan, mohon bersabar</string>
    <string name="audit_step_one_str">Terapkan</string>
    <string name="audit_step_two_str">Audit</string>
    <string name="audit_step_three_str">Pinjaman</string>
    <string name="audit_step_fail_str">Audit gagal</string>
    <string name="loan_step_ing_str">Pinjaman di</string>
    <string name="loan_step_ing_title_str">Pinjaman di</string>
    <string name="borrow_loan_step_str">Pinjaman</string>
    <string name="borrow_loan_fail_title_str">Pinjaman gagal</string>
    <string name="borrow_loan_fail_desc_str">Sedang ditinjau ulang,mohon bersabar</string>
    <string name="borrow_loan_over_time_str">Terlambat %sHari</string>
    <string name="upload_indentify_card_tip_str">upload foto ktp halaman depan</string>
    <string name="need_upload_indentify_card_tip_str">Gagal mengupload photo dengan id card, untuk kembali ke transmisi ulang langkah sebelumnya</string>
    <string name="upload_handle_card_tip_str">upload foto kartu identitas</string>
    <string name="about_us_str">Tentang kami</string>
    <string name="about_us_product_str">Produk</string>
    <string name="about_us_product_desc_str">Pinjam Plus adalah salah satu platform kredit tanpa jaminan pertama di Indonesia dimana pengguna dapat mengoperasikan sepenuhnya melalui app ponse</string>
    <string name="about_us_special_str">Fitur</string>
    <string name="about_us_special_desc_str">1. Fitur Produk: Minimal meminjam 600.000 Rupiah, pelunasan 7/14 hari, biayanya rendah.\n
2. Kredit Meminjam: Tidak ada hipotek, hanya 4 langkah, mudah didapat.\n
3. Pinjaman tercepat: Segera audit, hari yang sama dapat pinjaman\n
4. Pelayanan yang baik: Notifikasi pengingat pembayaran agar tepat waktu.</string>
    <string name="login_register_title_str">Anda belum masuk</string>
    <string name="go_to_login_str">Sudah punya akun,masuk sekarang</string>
    <string name="go_to_register_str">Tidak ada akun,daftar sekarang</string>
</resources>