<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@mipmap/bg_borrow_status_ok" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/repay_success_tip_str"
                android:textColor="#00A1E0"
                android:textSize="26sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/repay_borrow_tip_str"
                android:textColor="#B4C0D2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btn_borrow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_register_height"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="48dp"
                android:background="@mipmap/bg_register"
                android:gravity="center"
                android:text="@string/borrow_again_str"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_register_text_size" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>
