<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/borrow_header_height">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_borrow_header"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="1dp"
                                android:background="@mipmap/bg_borrow_header_line" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="3dp"
                                android:layout_marginRight="3dp"
                                android:text="@string/borrow_ing_desc_str"
                                android:textColor="@color/white"
                                android:textSize="14sp" />

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="1dp"
                                android:background="@mipmap/bg_borrow_header_line" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/money_unit"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:textSize="38sp" />

                            <TextView
                                android:id="@+id/money_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="642.00"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:textSize="38sp" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/borrow_limit_title"
                            android:textColor="#b0bccf"
                            android:textSize="14sp" />

                        <RadioGroup
                            android:id="@+id/limit_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <RadioButton
                                android:id="@+id/limit_one"
                                android:layout_width="match_parent"
                                android:layout_height="56dp"
                                android:layout_weight="1"
                                android:background="@drawable/bg_borrow_limit"
                                android:button="@null"
                                android:checked="true"
                                android:gravity="center"
                                android:text="@string/borrow_money_600"
                                android:textColor="@color/borrow_limit_text_color"
                                android:textSize="18sp" />

                            <View
                                android:layout_width="40dp"
                                android:layout_height="match_parent" />

                            <RadioButton
                                android:id="@+id/limit_two"
                                android:layout_width="match_parent"
                                android:layout_height="56dp"
                                android:layout_weight="1"
                                android:background="@drawable/bg_borrow_limit"
                                android:button="@null"
                                android:checked="false"
                                android:gravity="center"
                                android:text="@string/borrow_money_1200"
                                android:textColor="@color/borrow_limit_text_color"
                                android:textSize="18sp" />

                        </RadioGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/borrow_day_title"
                            android:textColor="#999999"
                            android:textSize="14sp" />

                        <RadioGroup
                            android:id="@+id/day_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <RadioButton
                                android:id="@+id/day_one"
                                android:layout_width="match_parent"
                                android:layout_height="56dp"
                                android:layout_weight="1"
                                android:background="@drawable/bg_borrow_limit"
                                android:button="@null"
                                android:checked="true"
                                android:gravity="center"
                                android:text="@string/borrow_day_7"
                                android:textColor="@color/borrow_limit_text_color"
                                android:textSize="18sp" />

                            <View
                                android:layout_width="40dp"
                                android:layout_height="match_parent" />

                            <RadioButton
                                android:id="@+id/day_two"
                                android:layout_width="match_parent"
                                android:layout_height="56dp"
                                android:layout_weight="1"
                                android:background="@drawable/bg_borrow_limit"
                                android:button="@null"
                                android:checked="false"
                                android:gravity="center"
                                android:text="@string/borrow_day_14"
                                android:textColor="@color/borrow_limit_text_color"
                                android:textSize="18sp" />

                        </RadioGroup>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/btn_borrow"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/btn_register_height"
                        android:layout_marginTop="50dp"
                        android:background="@mipmap/bg_register"
                        android:gravity="center"
                        android:text="@string/borrow_str"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:text="@string/borrow_tip_str"
                        android:visibility="gone"
                        android:textColor="#c8d0de"
                        android:textSize="12sp" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</LinearLayout>
