<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@mipmap/bg_login_register_header" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_register_title_str"
            android:textColor="#ff6216"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_go_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_register_height"
                android:background="@mipmap/bg_register"
                android:gravity="center"
                android:text="@string/go_to_login_str"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_register_text_size" />

            <TextView
                android:id="@+id/btn_go_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_register_height"
                android:layout_marginTop="20dp"
                android:background="@mipmap/bg_register"
                android:gravity="center"
                android:text="@string/go_to_register_str"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_register_text_size" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/icon_login_register_logo" />

    </LinearLayout>
</LinearLayout>
