<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/status_bar_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/bg_title_bar" />

        <RelativeLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/window_title_height"
            android:background="@android:color/transparent">

            <LinearLayout
                android:id="@+id/back_layout"
                android:layout_width="@dimen/window_title_height"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_back_primary" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/about_us_str"
                android:textColor="@color/title_color"
                android:textSize="@dimen/widnow_title_size" />

        </RelativeLayout>
    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="44dp"
                android:background="@mipmap/icon_logo" />

            <TextView
                android:id="@+id/product_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="#36445F"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="3dp"
                        android:layout_height="16dp"
                        android:background="@mipmap/bg_info_tip" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/about_us_product_str"
                        android:textColor="#180000"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/about_us_product_desc_str"
                    android:textColor="#6f798c"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="3dp"
                        android:layout_height="16dp"
                        android:background="@mipmap/bg_info_tip" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/about_us_special_str"
                        android:textColor="#36445f"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/about_us_special_desc_str"
                    android:textColor="#6f798c"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
